# Marketingmaschine

./: .dockerignore  .gitignore  Dockerfile  README.md  gap_analysis_01072026  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  mypy-ci.ini
config/: agents.json  evidence-vault.json  governance-policy.json  integrations.example.env  model-routing.json  operating-rhythm.json
db/: schema.sql
deploy/: docker-compose.candidate.nvidia.yml  docker-compose.candidate.yml  docker-compose.core.yml  docker-compose.existing-stack.yml  docker-compose.growth-tools.yml  docker-compose.network-access.yml  growth-tools.env.example  marketing-agent-entrypoint.sh  marketing-agent.env.example
docs/: WAMOCON-MARKETING-HANDBOOK.md  WAMOCON-Marketing-Handbuch.docx  architecture.md  deployment-stack.md  end-user-workflow.md  growth-creative-integration-acceptance.md  growth-tools.md  network-access.md  remote-project-runbook.md  resource-allocation.md  system-validation-2026-07-10.md  system-validation-2026-07-13.md  system-validation-2026-07-14.md  trend-studio.md
requirements/: ci.in
scripts/: accessibility_smoke.js  build_handbook_docx.py  build_release_archive.py  check_openai_compatible.py  clean_test_data.py  cleanup_test_data.py  dashboard_visual_smoke.js  evaluate_content_quality.py  mock_pipeline_test.py  operator_ui_isolated_smoke.js  qualify_comfyui_candidate.py  release_acceptance.py  render_handbook.py  setup_comfyui_candidate.py  smoke_api.py  start_candidate_qa_tunnels.ps1  trend_studio_user_flow_smoke.js  ui_truth_focused_smoke.js  (+1 more)
(+96 files in other folders)
