[project]
name = "wamocon-marketing-machine"
version = "0.1.0"
description = "Governed always-on AI marketing operating system scaffold for WAMOCON."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "WAMOCON" }]
dependencies = []

[project.optional-dependencies]
prod = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.51.0",
  "langgraph==1.2.9"
]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
